--- a/HelloMvc/project.json
+++ b/HelloMvc/project.json
@@ -8,7 +8,7 @@
         "emitEntryPoint": true
     },
     "dependencies" : {
-        "NETStandard.Library": "1.0.0-*",
+        "NETStandard.Library": "1.0.0-rc3-23829",
         "Microsoft.Extensions.Logging.Console": "1.0.0-*",
         "Microsoft.AspNetCore.IISPlatformHandler": "1.0.0-*",
         "Microsoft.AspNetCore.HttpOverrides": "1.0.0-*",
